<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/status_bar_icon"
        android:layout_width="@dimen/status_bar_album_art"
        android:layout_height="@dimen/status_bar_album_art"
        android:layout_gravity="left"
        android:scaleType="center"
        android:src="@drawable/default_album_identify"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="vertical"
        android:paddingLeft="@dimen/status_bar_button_info_container_padding_left">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/status_bar_track_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/status_bar_collapse"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />

            <ImageButton
                android:id="@+id/status_bar_collapse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="10.1dip"
                android:paddingTop="5.1dip"
                android:paddingBottom="5.1dip"
                android:background="?android:selectableItemBackground"
                android:src="@drawable/md_btn_close" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/status_bar_artist_name"
                android:layout_width="0.1dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dip"
                android:singleLine="true"
                android:textColor="@color/white" />

            <RelativeLayout
                android:layout_width="0.1dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/status_bar_prev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6.0dip"
                    android:background="?android:selectableItemBackground"
                    android:layout_toLeftOf="@+id/status_bar_play"
                    android:contentDescription="@string/cd_previous"
                    android:src="@drawable/md_btn_pre" />

                <ImageButton
                    android:id="@+id/status_bar_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6.0dip"
                    android:background="?android:selectableItemBackground"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/cd_play"
                    android:src="@drawable/md_btn_play" />

                <ImageButton
                    android:id="@+id/status_bar_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6.0dip"
                    android:background="?android:selectableItemBackground"
                    android:layout_toRightOf="@+id/status_bar_play"
                    android:contentDescription="@string/cd_next"
                    android:src="@drawable/md_btn_next" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>